<?xml version="1.0"?>
<package format="3">
  <name>qt_ros2_test</name>
  <version>0.0.1</version>
  <description>A simple ROS2 and Qt example</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Qt5</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
