<?xml version="1.0"?>
<package format="3">
  <name>qt_ros2_gui</name>
  <version>0.0.1</version>
  <description>A simple ROS2 and Qt example</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>Qt5</depend>

  <build_depend>adma_ros_driver_msgs</build_depend>
  <build_depend>autoware_adapi_v1_msgs</build_depend>
  <build_depend>autoware_auto_vehicle_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
